# sdk-nrf

./: west.yml
drivers/wifi/nrf700x/osal/fw_if/umac_if/inc/fw/: host_rpu_umac_if.h  rpu_fw_patches.h
drivers/wifi/nrf700x/zephyr/src/: zephyr_wifi_mgmt.c
samples/wifi/promiscuous/: CMakeLists.txt  Kconfig  prj.conf  sample.yaml
samples/wifi/promiscuous/src/: main.c  wifi_connection.c
samples/wifi/provisioning/: prj.conf
samples/wifi/shell/: overlay-zperf.conf  prj.conf
samples/wifi/shell/src/: main.c  wifi_main.c
samples/wifi/sta/: Kconfig  prj.conf
samples/wifi/sta/src/: common.h  main.c
samples/wifi/twt/: CMakeLists.txt  Kconfig  README.rst  prj.conf
samples/wifi/twt/modules/traffic_gen/: Kconfig
samples/wifi/twt/modules/traffic_gen/inc/: traffic_gen.h
samples/wifi/twt/modules/traffic_gen/src/: main.c  main.c.EXPERIMENTAL-checkpatch-fixes
samples/wifi/twt/modules/traffic_gen/src/tcp/: tcp.c  tcp.c.EXPERIMENTAL-checkpatch-fixes
samples/wifi/twt/src/: main.c
